--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "rkraftcomua",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.1.0",
+    "carousel": "^0.0.3",
+    "jquery": "^3.3.1",
+    "node": "^9.11.0",
+    "popover": "^2.4.1",
+    "popper": "^1.0.1",
+    "sass": "^1.1.1",
+    "webpacker": "^0.0.3"
+  }
 }
