--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: Rghost
+  name: Rghost Atroot
   address: MyText
   email: miarhost@gmail.com
-   pay_type: Check
+  pay_type: Check
   
 
 two:
   name: MyString
   address: MyText
   email: MyString
-   pay_type: 1
+  pay_type: 1
 
