--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: sql2
+    image: ./Dockerfile-db
     volumes:
       - ./tmp/db:/var/www/rails/rkraftcomua/lib/sql2/data
   web:
